--- a/Scripts/CH-GetBody.conf
+++ b/Scripts/CH-GetBody.conf
@@ -1,4 +1,4 @@
-hostname = *.tenpay.com
+hostname = app.kxp.com
 
 http-request https:\/\/app\.kxp\.com\/video\/v1\/video\/complete script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/CONGHUA/conghuabody.js, requires-body=true, timeout=10, enabled=true, tag=葱花
 
