--- a/.github/workflows/flw.yml
+++ b/.github/workflows/flw.yml
@@ -49,3 +49,4 @@ jobs:
                   FL_flwspBODY: ${{ secrets.FL_flwspBODY }}	
                   FL_flwqwBODY: ${{ secrets.FL_flwqwBODY }}        
                   FL_CASH: ${{ secrets.FL_CASH }}
+                  FL_DHCASH: ${{ secrets.FL_DHCASH }}
