--- a/.github/workflows/baidu_speed.yml
+++ b/.github/workflows/baidu_speed.yml
@@ -3,7 +3,7 @@ name: 百度极速版
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/30 * * * *'
+     - cron: '30 * * * *'
   watch:
     types: started
 jobs:
