--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,5 @@
-
 FROM node:lts-alpine
-LABEL maintainer="Docker"
+LABEL maintainer="Evine Deng <evinedeng@foxmail.com>"
 ARG JD_BASE_URL=https://github.com/dockere/jd-base
 ARG JD_BASE_BRANCH=master
 ARG JD_SCRIPTS_URL=https://gitee.com/lxk0301/jd_scripts
