--- a/sample/config.sh.sample
+++ b/sample/config.sh.sample
@@ -1,6 +1,6 @@
-## Version: v3.26.3
-## Date: 2021-02-11
-## Update Content: 移除推送通知酷推(Cool Push)变量,更新推送通知变量说明,增加diy.sh模板,使用说明请移步到EnableExtraShell变量说明查看。
+## Version: v3.26.5
+## Date: 2021-02-16
+## Update Content: 移除过期活动互助变量；可不更新！
 
 ## 上面版本号中，如果第2位数字有变化，那么代表增加了新的参数，如果只有第3位数字有变化，仅代表更新了注释，没有增加新的参数，可更新可不更新
 ## 如需更新，请参考WIKI（https://github.com/EvineDeng/jd-base/wiki）中"如何更新配置文件"部分的操作说明，进行智能比对后修改。
@@ -359,64 +359,6 @@ ForOtherSgmh3=""
 ForOtherSgmh4=""
 ForOtherSgmh5=""
 ForOtherSgmh6=""
-
-
-################################## 定义2020年炸年兽活动互助（选填） ##################################
-## 具体填法及要求详见本文件最下方“互助码填法示例”
-## 仅2021年2月12日前有效
-MyNian1=""
-MyNian2=""
-MyNian3=""
-MyNian4=""
-MyNian5=""
-MyNian6=""
-MyNianA=""
-MyNianB=""
-
-ForOtherNian1=""
-ForOtherNian2=""
-ForOtherNian3=""
-ForOtherNian4=""
-ForOtherNian5=""
-ForOtherNian6=""
-
-
-################################## 定义2020年炸年兽组队PK互助（选填） ##################################
-## 具体填法及要求详见本文件最下方“互助码填法示例”
-## 仅2021年2月12日前有效
-MyNianPk1=""
-MyNianPk2=""
-MyNianPk3=""
-MyNianPk4=""
-MyNianPk5=""
-MyNianPk6=""
-MyNianPkA=""
-MyNianPkB=""
-
-ForOtherNianPk1=""
-ForOtherNianPk2=""
-ForOtherNianPk3=""
-ForOtherNianPk4=""
-ForOtherNianPk5=""
-ForOtherNianPk6=""
-################################## 定义京东压岁钱活动互助（选填） ##################################
-## 具体填法及要求详见本文件最下方“互助码填法示例”
-## 仅2021年2月11日(含)前有效
-MyNY1=""
-MyNY2=""
-MyNY3=""
-MyNY4=""
-MyNY5=""
-MyNY6=""
-MyNYA=""
-MyNYB=""
-
-ForOtherNY1=""
-ForOtherNY2=""
-ForOtherNY3=""
-ForOtherNY4=""
-ForOtherNY5=""
-ForOtherNY6=""
 
 
 ################################## 定义京东环球挑战赛活动互助（选填） ##################################
