--- a/sample/config.sh.sample
+++ b/sample/config.sh.sample
@@ -1,6 +1,6 @@
 ## Version: v3.26.5
 ## Date: 2021-02-16
-## Update Content: 移除过期活动互助变量
+## Update Content: 经过测试环球挑战赛报错是默认cron整点运行的锅；请自己更改默认cron，本次为通知无任何更新
 
 ## 上面版本号中，如果第2位数字有变化，那么代表增加了新的参数，如果只有第3位数字有变化，仅代表更新了注释，没有增加新的参数，可更新可不更新
 ## 如需更新，请参考WIKI（https://github.com/EvineDeng/jd-base/wiki）中"如何更新配置文件"部分的操作说明，进行智能比对后修改。
