--- a/.github/workflows/youth.yml
+++ b/.github/workflows/youth.yml
@@ -29,6 +29,7 @@ jobs:
       - name: '运行 【中青看点】'
         if: env.YOUTH_HEADER
         run: |
+          cd ~/Scalloped-Wool
           node Task/youth.js
         env:
           YOUTH_NOTIFY_CONTROL: ${{ secrets.YOUTH_NOTIFY_CONTROL }}
