--- a/.github/workflows/youth.yml
+++ b/.github/workflows/youth.yml
@@ -3,50 +3,48 @@ name: 中青看点
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/7 */5 * * *'
+    - cron: '*/7 */5 * * *'
   watch:
     types: started
-
+  repository_dispatch:
+    types: jd_job
 jobs:
   build:
+    env:
+      JD_COOKIE: ${{ secrets.JD_COOKIE }}
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
-    env:
-        YOUTH_HEADER: ${{ secrets.YOUTH_HEADER }}
-        YOUTH_ARTBODY: ${{ secrets.YOUTH_ARTBODY }}
-        YOUTH_TIME: ${{ secrets.YOUTH_TIME }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-      - name: Use Node.js 12.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.x
-      - name: npm install
-        if: env.YOUTH_HEADER
+        if: env.JD_COOKIE
         run: |
-          git checkout Sunert
+          git clone https://github.com/1217079729/TaskAction.git ~/TaskAction
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        if: env.JD_COOKIE
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Cache node_modules
+        if: env.JD_COOKIE
+        uses: actions/cache@v2 # 使用 GitHub 官方的缓存 Action。
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }} # 使用 package-lock.json 的 Hash 作为缓存的 key。也可以使用 package.json 代替
+      - name: npm install
+        if: env.JD_COOKIE
+        run: |
+          cd ~/TaskAction
+          git checkout jd_code
           npm install
-      - name: '运行 【中青看点】'
-        if: env.YOUTH_HEADER
+      - name: '中青看点'
         run: |
           node Task/youth.js
         env:
-          YOUTH_NOTIFY_CONTROL: ${{ secrets.YOUTH_NOTIFY_CONTROL }}
-          PUSH_KEY: ${{ secrets.PUSH_KEY}}
-          BARK_PUSH: ${{ secrets.BARK_PUSH}}
-          BARK_SOUND: ${{ secrets.BARK_SOUND}}
-          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN}}
-          TG_USER_ID: ${{ secrets.TG_USER_ID}}
-          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN}}
-          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET}}
-          QYWX_KEY: ${{ secrets.QYWX_KEY}}
-          IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY}}
-          QQ_SKEY: ${{ secrets.QQ_SKEY}}
-          QQ_MODE: ${{ secrets.QQ_MODE}}
-          PUSH_PLUS_TOKEN: ${{ secrets.PUSH_PLUS_TOKEN}}
-          PUSH_PLUS_USER: ${{ secrets.PUSH_PLUS_USER}}
-          TG_PROXY_HOST: ${{ secrets.TG_PROXY_HOST}}
-          TG_PROXY_PORT: ${{ secrets.TG_PROXY_PORT}}
-
-    
+          JD_COOKIE: ${{ secrets.JD_COOKIE }}
+          BARK_PUSH: ${{ secrets.BARK_PUSH }}
+          PUSH_KEY: ${{ github.event.client_payload.PUSH_KEY || secrets.PUSH_KEY }}
+		  YOUTH_HEADER: ${{ secrets.YOUTH_HEADER }}
+          YOUTH_ARTBODY: ${{ secrets.YOUTH_ARTBODY }}
+          YOUTH_TIME: ${{ secrets.YOUTH_TIME }}
