--- a/.github/workflows/youth.yml
+++ b/.github/workflows/youth.yml
@@ -3,7 +3,7 @@ name: 中青看点
 on:
     workflow_dispatch:
     schedule:
-        - cron: "10 * * * *"
+        - cron: "*/30 * * * *"
     watch:
         types: [started]
     repository_dispatch:
