--- a/.github/workflows/youth1.yml
+++ b/.github/workflows/youth1.yml
@@ -25,8 +25,8 @@ jobs:
       - name: '运行 【中青看点测试】'
         if: env.YOUTH_HEADER
         run: |
-          cd ~/Scalloped-Wool/Sunert
-          node Task/youth.js
+          cd ~/Scalloped-Wool/Sunert/Task
+          node youth.js
         env:
           BAIDU_CASH: ${{ secrets.BAIDU_CASH }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
