--- a/.github/workflows/all_scripts.yml
+++ b/.github/workflows/all_scripts.yml
@@ -2,7 +2,7 @@
 name: All_Scripts-🔄自动同步🔄
 on:
   schedule:
-    - cron: '20 11 * * *'
+    - cron: '20 */4 * * *'
   workflow_dispatch:
   watch:
     types: started
