--- a/sample/config.sh.sample
+++ b/sample/config.sh.sample
@@ -1,6 +1,6 @@
-## Version: v3.26.9
+## Version: v3.27.0
 ## Date: 2021-02-20
-## Update Content: 重新构建了下镜像，减少镜像体积；原先是先pull LXK大佬库，目前是启动容器后再pull，如重新安装后请等待1-2分钟
+## Update Content: lxk大佬库被封，暂时注释掉Scripts
 
 ## 上面版本号中，如果第2位数字有变化，那么代表增加了新的参数，如果只有第3位数字有变化，仅代表更新了注释，没有增加新的参数，可更新可不更新
 ## 如需更新，请参考WIKI（https://github.com/EvineDeng/jd-base/wiki）中"如何更新配置文件"部分的操作说明，进行智能比对后修改。
