--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -28,6 +28,10 @@ RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
     && echo "Asia/Shanghai" > /etc/timezone \
     && git clone -b ${JD_BASE_BRANCH} ${JD_BASE_URL} ${JD_DIR} \
     && cd ${JD_DIR}/panel \
+    && mkdir -p /root/.ssh \
+    && echo -e ${KEY} > /root/.ssh/id_rsa \
+    && chmod 600 /root/.ssh/id_rsa \
+    && ssh-keyscan gitee.com > /root/.ssh/known_hosts \
     && npm install \
     && npm install -g pm2 \
     && ln -sf ${JD_DIR}/jd.sh /usr/local/bin/jd \
@@ -37,12 +41,6 @@ RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
     && cp -f ${JD_DIR}/docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh \
     && chmod 777 /usr/local/bin/docker-entrypoint.sh \
     && rm -rf /jd/docker \
-    && rm -rf /root/.npm
-RUN mkdir -p /root/.ssh && \
-    chmod 600 /root/.ssh && \
-    ssh-keyscan giee.com > /root/.ssh/known_hosts 
-RUN echo ${KEY} > /root/.ssh/id_rsa && \
-    chmod 600 /root/.ssh/id_rsa && 
-        
+    && rm -rf /root/.npm  
 WORKDIR ${JD_DIR}
 ENTRYPOINT docker-entrypoint.sh
