--- a/.github/workflows/all_scripts.yml
+++ b/.github/workflows/all_scripts.yml
@@ -20,14 +20,14 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: lxk0301-🔄自动同步🔄
-        uses: repo-sync/github-sync@v2
-        if: env.PAT
-        with:
-          source_repo: "https://gitee.com/lxk0301/jd_scripts.git"
-          source_branch: "master"
-          destination_branch: "lxk0301"
-          github_token: ${{ github.event.client_payload.PAT || secrets.PAT }}
+#      - name: lxk0301-🔄自动同步🔄
+#        uses: repo-sync/github-sync@v2
+#        if: env.PAT
+#        with:
+#          source_repo: "https://gitee.com/lxk0301/jd_scripts.git"
+#          source_branch: "master"
+#          destination_branch: "lxk0301"
+#          github_token: ${{ github.event.client_payload.PAT || secrets.PAT }}
       - name: ziye66666-🔄自动同步🔄
         uses: repo-sync/github-sync@v2
         if: env.PAT
