--- a/docker/Dockerfile_python
+++ b/docker/Dockerfile_python
@@ -34,6 +34,7 @@ RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
                              musl \
                              autoconf \ 
                              libtool \
+                             openssh \
     && rm -rf /tmp/* \
     && rm -rf /var/cache/apk/* \
     && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
