--- a/.github/workflows/dockerpush.yml
+++ b/.github/workflows/dockerpush.yml
@@ -15,7 +15,7 @@ jobs:
           publish: true
           imageName: noobx/jd
           dockerFile: docker/Dockerfile
-          platform: linux/amd64,linux/arm64,linux/arm/v7
+          platform: linux/amd64,linux/arm64,linux/arm/v6,linux/arm/v7
           tag: gitee
           dockerUser: ${{ secrets.DOCKER_USERNAME }}
           dockerPassword: ${{ secrets.DOCKER_PASSWORD }}
