--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -1,28 +1,42 @@
-name: Gitee repos mirror periodic job
+# File: .github/workflows/repo-sync.yml
+name: sync-LXK9301-scripts
 on:
-# 如果需要PR触发把push前的#去掉
- push:
   schedule:
-    # 每天北京时间9点跑
-    - cron:  '0 1 * * *'
+    - cron: '1 0,15 * * *'
+  workflow_dispatch:
+  watch:
+    types: started
+  push:
+    branches: [ master ]
+  repository_dispatch:
+    types: sync-LXK9301-scripts
 jobs:
-  build:
+  repo-sync:
+    env:
+      PAT: ${{ secrets.PAT }} #此处PAT需要申请，教程详见：https://www.jianshu.com/p/bb82b3ad1d11
+      dst_key: ${{ secrets.GITEE_PRIVATE_KEY }} # 我自己同步到gitee使用，其他人可忽略
     runs-on: ubuntu-latest
+    if: github.event.repository.owner.id == github.event.sender.id
     steps:
-    - name: Mirror the Github organization repos to Gitee.
-      uses: Yikun/gitee-mirror-action@v0.01
-      with:
-        # 必选，需要同步的Github用户（源）
-        src: github/dockere/jd-base
-        # 必选，需要同步到的Gitee的用户（目的）
-        dst: gitee/dockere/jd-base
-        # 必选，Gitee公钥对应的私钥，https://gitee.com/profile/sshkeys
-        dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
-        # 必选，Gitee对应的用于创建仓库的token，https://gitee.com/profile/personal_access_tokens
-        dst_token:  ${{ secrets.GITEE_TOKEN }}
-        # 如果是组织，指定组织即可，默认为用户user
-        # account_type: org
-        # 还有黑、白名单，静态名单机制，可以用于更新某些指定库
-        # static_list: repo_name
-        # black_list: 'repo_name,repo_name2'
-        # white_list: 'repo_name,repo_name2'
+      - uses: actions/checkout@v2
+        with:
+          persist-credentials: false
+
+      - name: sync LXK9301-scripts
+        uses: repo-sync/github-sync@v2
+        if: env.PAT
+        with:
+          source_repo: "https://github.com/dockere/jd-base.git"
+          source_branch: "master"
+          destination_branch: "master"
+          github_token: ${{ secrets.PAT }}
+      # 我自己同步到gitee使用，其他人可忽略
+      - name: sync github -> gitee
+        uses: Yikun/hub-mirror-action@master
+        if: env.dst_key
+        with:
+          src: github/dockere
+          dst: gitee/dockere
+          static_list: "jd-base"
+          dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
+          dst_token: ${{ secrets.GITEE_TOKEN }}
