--- a/sample/config.sh.sample
+++ b/sample/config.sh.sample
@@ -1,9 +1,9 @@
-## Version: v3.27.0
-## Date: 2021-02-21
-## Update Content: 原lxk库改为私库；需要用的到秘钥拉取脚本，故重新构建了镜像，自动git_pull改为每天两次，每次拉取自动随机cron。
+## Version: v3.27.1
+## Date: 2021-02-22
+## Update Content: 去除过期环球挑战赛互助;【因部分地区github被墙，导致无法正常拉取shell,已经切换到gitee，请重新拉取镜像】
 
 ## 上面版本号中，如果第2位数字有变化，那么代表增加了新的参数，如果只有第3位数字有变化，仅代表更新了注释，没有增加新的参数，可更新可不更新
-## 如需更新，请参考WIKI（https://github.com/EvineDeng/jd-base/wiki）中"如何更新配置文件"部分的操作说明，进行智能比对后修改。
+## 如需更新，请参考（https://github.com/dockere/jd-base）。
 
 ################################## 说明 ##################################
 ## 以下配置中，带有 export 申明的，均由LXK9301大佬定义，详见：https://gitee.com/lxk0301/jd_scripts/blob/master/githubAction.md
@@ -359,26 +359,6 @@ ForOtherSgmh3=""
 ForOtherSgmh4=""
 ForOtherSgmh5=""
 ForOtherSgmh6=""
-
-
-################################## 定义京东环球挑战赛活动互助（选填） ##################################
-## 具体填法及要求详见本文件最下方“互助码填法示例”
-## 仅2021年2月22日(含)前有效
-MyGLOBAL1=""
-MyGLOBAL2=""
-MyGLOBAL3=""
-MyGLOBAL4=""
-MyGLOBAL5=""
-MyGLOBAL6=""
-MyGLOBALA=""
-MyGLOBALB=""
-
-ForOtherGLOBAL1=""
-ForOtherGLOBAL2=""
-ForOtherGLOBAL3=""
-ForOtherGLOBAL4=""
-ForOtherGLOBAL5=""
-ForOtherGLOBAL6=""
 
 
 ################################## 定义东东超市蓝币兑换数量（选填） ##################################
