--- a/docker/Dockerfile_python
+++ b/docker/Dockerfile_python
@@ -1,6 +1,6 @@
 FROM python:3.6.13-alpine
 LABEL maintainer="Evine Deng"
-ARG JD_BASE_URL=https://github.com/dockere/jd-base
+ARG JD_BASE_URL=https://gitee.com/dockere/jd-base
 ARG JD_BASE_BRANCH=master
 ENV PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin \
     LANG=zh_CN.UTF-8 \
