--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,7 +19,8 @@ RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
                              git \
                              wget \
                              curl \
-                             nano \
+                             npm \
+                             nano \ 
                              tzdata \
                              perl \
                              openssl \
