--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:lts-alpine
+FROM alpine:3.13.2
 LABEL maintainer="Evine Deng"
 ARG JD_BASE_URL=https://gitee.com/dockere/jd-base
 ARG JD_BASE_BRANCH=master
@@ -18,6 +18,8 @@ RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
                              moreutils \
                              git \
                              wget \
+                             nodejs \
+                             npm \
                              curl \
                              nano \ 
                              tzdata \
