--- a/sample/config.sh.sample
+++ b/sample/config.sh.sample
@@ -1,6 +1,6 @@
-## Version: v3.27.1
+## Version: v3.27.2
 ## Date: 2021-02-23
-## Update Content: 去除过期环球挑战赛互助;【因部分地区github被墙，导致无法正常拉取shell,已经切换到gitee，如无法拉取shell，请重新拉取镜像】
+## Update Content: 修复宠汪汪赛跑jd_joy_run报错，底层原因，需要重新拉取镜像;【因部分地区github被墙，导致无法正常拉取shell,已经切换到gitee，如无法拉取shell，请重新拉取镜像】
 
 ## 上面版本号中，如果第2位数字有变化，那么代表增加了新的参数，如果只有第3位数字有变化，仅代表更新了注释，没有增加新的参数，可更新可不更新
 ## 如需更新，请参考（https://github.com/dockere/jd-base）。
