--- a/panel/package.json
+++ b/panel/package.json
@@ -4,6 +4,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "got": "^11.8.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "uuid": "^8.3.2"
   }
 }
