--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -4,6 +4,8 @@ on:
   schedule:
     - cron: '1 0,15 * * *'
   workflow_dispatch:
+  watch:
+    types: started
   push:
     branches: [ master ]
   repository_dispatch:
