--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -8,6 +8,8 @@ on:
     types: started
   push:
     branches: [ master ]
+  repository_dispatch:
+    types: sync-docker-jdbase
 jobs:
   repo-sync:
     env:
