--- a/sample/config.sh.sample
+++ b/sample/config.sh.sample
@@ -1,6 +1,6 @@
-## Version: v3.27.2
+## Version: v3.28.2
 ## Date: 2021-02-23
-## Update Content: 修复宠汪汪赛跑jd_joy_run报错，底层原因，需要重新拉取镜像;【因部分地区github被墙，导致无法正常拉取shell,已经切换到gitee，如无法拉取shell，请重新拉取镜像】
+## Update Content:增加惊喜财富岛互助
 
 ## 上面版本号中，如果第2位数字有变化，那么代表增加了新的参数，如果只有第3位数字有变化，仅代表更新了注释，没有增加新的参数，可更新可不更新
 ## 如需更新，请参考（https://github.com/dockere/jd-base）。
@@ -361,6 +361,23 @@ ForOtherSgmh5=""
 ForOtherSgmh6=""
 
 
+################################## 定义惊喜财富岛互助（选填） ##################################
+## 具体填法及要求详见本文件最下方“互助码填法示例”
+MyCFD1=""
+MyCFD2=""
+MyCFD3=""
+MyCFD4=""
+MyCFD5=""
+MyCFD6=""
+MyCFDA=""
+MyCFDB=""
+
+ForOtherCFD1=""
+ForOtherCFD2=""
+ForOtherCFD3=""
+ForOtherCFD4=""
+ForOtherCFD5=""
+ForOtherCFD6=""
 ################################## 定义东东超市蓝币兑换数量（选填） ##################################
 ## 东东超市蓝币兑换，可用值包括：
 ## 一、0：表示不兑换京豆，这也是js脚本的默认值
