--- a/sample/config.sh.sample
+++ b/sample/config.sh.sample
@@ -363,21 +363,21 @@ ForOtherSgmh6=""
 
 ################################## 定义惊喜财富岛互助（选填） ##################################
 ## 具体填法及要求详见本文件最下方“互助码填法示例”
-MyJDCFD1=""
-MyJDCFD2=""
-MyJDCFD3=""
-MyJDCFD4=""
-MyJDCFD5=""
-MyJDCFD6=""
-MyJDCFDA=""
-MyJDCFDB=""
+MyJdcfd1=""
+MyJdcfd2=""
+MyJdcfd3=""
+MyJdcfd4=""
+MyJdcfd5=""
+MyJdcfd6=""
+MyJdcfdA=""
+MyJdcfdB=""
 
-ForOtherJDCFD1=""
-ForOtherJDCFD2=""
-ForOtherJDCFD3=""
-ForOtherJDCFD4=""
-ForOtherJDCFD5=""
-ForOtherJDCFD6=""
+ForOtherJdcfd1=""
+ForOtherJdcfd2=""
+ForOtherJdcfd3=""
+ForOtherJdcfd4=""
+ForOtherJdcfd5=""
+ForOtherJdcfd6=""
 ################################## 定义东东超市蓝币兑换数量（选填） ##################################
 ## 东东超市蓝币兑换，可用值包括：
 ## 一、0：表示不兑换京豆，这也是js脚本的默认值
