--- a/.github/workflows/all_scripts.yml
+++ b/.github/workflows/all_scripts.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           source_repo: "https://gitee.com/lxk0301/jd_docker.git"
           source_branch: "master"
-          destination_branch: "lxk0301"
+          destination_branch: "dockere_jd"
           github_token: ${{ github.event.client_payload.PAT || secrets.PAT }}
       - name: dockere_jd-🔄自动同步🔄
         uses: repo-sync/github-sync@v2
