--- a/sample/config.sh.sample
+++ b/sample/config.sh.sample
@@ -1,6 +1,6 @@
-## Version: v3.29.3
-## Date: 2021-3-3
-## Update Content:Lxk大佬去除惊喜农场JXNCTOKENS变量，故去除京喜农场TOKEN
+## Version: v3.30.3
+## Date: 2021-3-8
+## Update Content:京小兑控制变量
 
 ## 上面版本号中，如果第2位数字有变化，那么代表增加了新的参数，如果只有第3位数字有变化，仅代表更新了注释，没有增加新的参数，可更新可不更新
 ## 如需更新，请参考（https://github.com/dockere/jd-base）。
@@ -526,6 +526,14 @@ export JDJOY_APPLYJDBEAN=""
 ## 口袋书店和东东小窝有些任务需要将商品加进购物车才能完成，默认 "false" 不做这些任务，如想做，请设置为 "true"
 export PURCHASE_SHOPS=""
 
+################################## 定义京喜财富岛通知（选填） ##################################
+## 输入true为通知,默认 "false",不填则为不通知
+export CFD_NOTIFY_CONTROL=""
+
+
+################################## 定义京小兑是否自动把抽奖卷兑换为兑币,（选填） ##################################
+## 输入true为自动兑换,不填则为不兑换
+export PURCHASE_SHOPS=""
 
 ################################## Telegram 代理（选填） ##################################
 ## Telegram 代理的 IP，代理类型为 http，比如你代理是 http://127.0.0.1:1080，则填写 "127.0.0.1"
@@ -543,9 +551,6 @@ export PURCHASE_SHOPS=""
 ## 仓库下已经上传diy.sh模板，如果你想使用；可以参考本仓库下 diy.sh 文件；地址：https://raw.githubusercontent.com/dockere/jd-base/master/sample/diy.sh
 EnableExtraShell=""
 
-################################## 定义京喜财富岛通知（选填） ##################################
-## 输入true为通知,默认 "false",不填则为不通知
-export CFD_NOTIFY_CONTROL=""
 
 ################################## 互助码填法示例 ##################################
 ## **互助码是填在My系列变量中的，ForOther系统变量中只要填入My系列的变量名即可，按注释中的例子拼接，以东东农场为例，如下所示。**
