--- a/sample/config.sh.sample
+++ b/sample/config.sh.sample
@@ -533,7 +533,7 @@ export CFD_NOTIFY_CONTROL=""
 
 ################################## 定义京小兑是否自动把抽奖卷兑换为兑币,（选填） ##################################
 ## 输入true为自动兑换,不填则为不兑换
-export PURCHASE_SHOPS=""
+export JD_JXD_EXCHANGE=""
 
 ################################## Telegram 代理（选填） ##################################
 ## Telegram 代理的 IP，代理类型为 http，比如你代理是 http://127.0.0.1:1080，则填写 "127.0.0.1"
