--- a/sample/config.sh.sample
+++ b/sample/config.sh.sample
@@ -1,6 +1,6 @@
-## Version: v3.30.3
+## Version: v3.30.5
 ## Date: 2021-3-8
-## Update Content:京小兑控制变量
+## Update Content:京小兑控制变量，宠汪汪自己内部账户互助变量
 
 ## 上面版本号中，如果第2位数字有变化，那么代表增加了新的参数，如果只有第3位数字有变化，仅代表更新了注释，没有增加新的参数，可更新可不更新
 ## 如需更新，请参考（https://github.com/dockere/jd-base）。
@@ -534,6 +534,12 @@ export CFD_NOTIFY_CONTROL=""
 ################################## 定义京小兑是否自动把抽奖卷兑换为兑币,（选填） ##################################
 ## 输入true为自动兑换,不填则为不兑换
 export JD_JXD_EXCHANGE=""
+
+
+################################## 定义京小兑是否自动把抽奖卷兑换为兑币,（选填） ##################################
+## 输入true为开启内部互助,不填默认关闭
+export JOY_RUN_HELP_MYSELF=""
+
 
 ################################## Telegram 代理（选填） ##################################
 ## Telegram 代理的 IP，代理类型为 http，比如你代理是 http://127.0.0.1:1080，则填写 "127.0.0.1"
