--- a/sample/config.sh.sample
+++ b/sample/config.sh.sample
@@ -536,7 +536,7 @@ export CFD_NOTIFY_CONTROL=""
 export JD_JXD_EXCHANGE=""
 
 
-################################## 定义京小兑是否自动把抽奖卷兑换为兑币,（选填） ##################################
+################################## 定义宠汪汪是否开启内部互助,（选填） ##################################
 ## 输入true为开启内部互助,不填默认关闭
 export JOY_RUN_HELP_MYSELF=""
 
