--- a/sample/config.sh.sample
+++ b/sample/config.sh.sample
@@ -1,6 +1,6 @@
-## Version: v3.30.5
+## Version: v3.30.6
 ## Date: 2021-3-8
-## Update Content:京小兑控制变量，宠汪汪自己内部账户互助变量
+## Update Content:京小兑控制变量，宠汪汪自己内部账户互助变量,环球挑战赛互助变量
 
 ## 上面版本号中，如果第2位数字有变化，那么代表增加了新的参数，如果只有第3位数字有变化，仅代表更新了注释，没有增加新的参数，可更新可不更新
 ## 如需更新，请参考（https://github.com/dockere/jd-base）。
