--- a/sample/config.sh.sample
+++ b/sample/config.sh.sample
@@ -586,6 +586,9 @@ export JDZZ_NOTIFY_CONTROL=""
 ## 输入true为开启内部互助,不填默认关闭
 export JOY_RUN_HELP_MYSELF=""
 
+################################## 定义城城领现金是否自动抽奖（选填） ##################################
+## 非必填，建议活动快结束开启，默认关闭，true开启
+export JD_CITY_EXCHANGE=""
 
 ################################## Telegram 代理（选填） ##################################
 ## Telegram 代理的 IP，代理类型为 http，比如你代理是 http://127.0.0.1:1080，则填写 "127.0.0.1"
